--- a/views/thankyou.pug
+++ b/views/thankyou.pug
@@ -1,14 +1,7 @@
 extends layout
-
 block content
-
-    section#intro-text
-        span Simple Kitchen
-        h3
-        | Simple &amp; Comforting 
-        br
-        |             Recipes All Year Round
-
-    span#intro-reply
-        br
-        | Thank you for your registration!
+  main
+    #intro-text
+      span Simple Kitchen
+      h3 Thank you for your registration!
+      p We have received your registration details
