--- a/views/layout.pug
+++ b/views/layout.pug
@@ -3,7 +3,10 @@ html
   head
     link(rel='preconnect' href='https://fonts.gstatic.com')
     link(href='https://fonts.googleapis.com/css2?family=Sacramento&display=swap' rel='stylesheet')
-    link(rel='StyleSheet' href='css/styles.css' type='text/css')
+    link(rel='stylesheet', href='https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css')
+    link(rel='StyleSheet' href='/css/styles.css' type='text/css')
+    
+
     script(src='script.js')
 
   header
@@ -21,8 +24,8 @@ html
           a(href='register') Register
         
 
-  main
-    block content
+  
+  block content
 
   footer
     | &copy; Copyright 2022
